--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -135,7 +135,7 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">三、規劃產品頁面內容</div>
                                 <div class="pup_text large_text">
-                                    <span class="emphasize_text">旅程步驟作為產品第一層級項目</span>貼合使用者投資習慣，<br />「一手掌握投資旅程」為概念，<span class="emphasize_text">以投資地點命名第一層級項目， 使名稱意會當中內容</span>，方便使用者依循查找。
+                                    <span class="emphasize_text">旅程步驟作為產品第一層級項目</span>貼合使用者投資習慣，<br />「一手掌握投資旅程」為概念，<span class="emphasize_text">以投資地點命名第一層級項目，使名稱意會當中內容</span>，方便使用者依循查找。
                                 </div>
                                 <div class="text_item" style="margin-top:20px;">
                                     <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin:0px 0px;">
@@ -155,7 +155,7 @@
                                         <picture>
                                             <img src="images/gapp_pic_4-1.png" class="sino_pic_10">
                                         </picture>
-                                        <div class="pup_normal_text font_bold emphasize_text" style="margin:10px 0px 5px 0px;">登入後預設首頁，主要引導使用者產生投資動機，提升目標達成率。</div>
+                                        <div class="pup_normal_text font_bold emphasize_text" style="margin:10px 0px 5px 0px;">登入後預設首頁，主要引導使用者產生投資動機，提升營收達成率。</div>
                                         <div class="pup_normal_text">
                                             <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
                                                 <li><span class="emphasize_text">資產概要：</span><br />
