--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -86,7 +86,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">一、網站主要使用者類型</div>
-                    <div class="pup_normal_text">所謂「82法則」8成的收入來自2成的消費者，所以2C的產品開發前，<br />需要定義<span class="emphasize_text">誰是產品的主要收益來源</span>，<br />作為<span class="emphasize_text">「行銷推廣、招募受訪者、網站內容制定」</span>之依據。</div>
+                    <div class="pup_normal_text">所謂「82法則」8成的收入來自2成的消費者，<br />所以2C的產品開發前，需要定義<span class="emphasize_text">誰是產品的主要收益來源</span>，<br />作為<span class="emphasize_text">「行銷推廣、招募受訪者、網站內容制定」</span>之依據。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">展示部分條件為例(非實際詳細資訊)。</div>
                     <div class="pup_normal_text"></div>
                     <div class="pup_content_text">
