--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1005,7 +1005,7 @@
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">行動流程</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">規劃內容</a></span>
                                 </div>
                             </div>
                             <div class="work_info_note">
