--- a/info_attribute_tell.html
+++ b/info_attribute_tell.html
@@ -74,7 +74,7 @@
 <body class="body_page info_attribute_tell_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">合作夥伴對於我的看法</div>
+            <div class="h4 font_bold">專案成員對於我的看法</div>
             <a href="uiux_index.html#p3_title">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
