--- a/info_attribute_tell.html
+++ b/info_attribute_tell.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="pup_window_content_part">
-                <div class="part_title h5 font_bold emphasize_text">UX研究專案</div>
+                <div class="part_title h5 font_bold emphasize_text">UXR市場研究</div>
                 <div class="part_content pup_content">
                     <div class="part_text large_text">組員們對我的觀察了解。</div>
                     <div class="pup_content_pic">
@@ -124,8 +124,8 @@
             <div class="pup_window_content_part" style="margin-bottom:0px;">
                 <div class="part_title h5 font_bold emphasize_text">工作表現</div>
                 <div class="pup_content">
-                    <div class="pup_text large_text">公司業務主管反應客戶對於設計的評價。</div>
-                    <div class="pup_text large_text">外包案件雇主對於合作後的感受。</div>
+                    <div class="pup_text large_text">公司客戶對設計的評價。</div>
+                    <div class="pup_text large_text">外包雇主合作後的感受。</div>
                     <div class="pup_content_pic" style="margin-bottom:0px;">
                         <picture>
                             <source media="(max-width:430px)" srcset="images/info_attribute_tell_img_4_420.jpg" />
