--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -103,7 +103,8 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、定義產品核心</div>
-                        <div class="pup_normal_text">藉由訪談裕隆管理單位窗口，了解集團和員工之間的角色定位和需求，<span class="emphasize_text">確保規劃內容符合開發價值。</span></div>
+                        <div class="pup_normal_text"><span class="emphasize_text">除了幫助使用者完成操作目標，更需定義完成操作後，產品能給營運方、使用者哪些價值，</span><br/>確保規劃內容符合開發成本。</div>
+                        <div class="pup_normal_text">因此藉由訪談裕隆管理單位窗口，了解集團和員工之間的角色定位和需求，討論產品理念和營運價值。</div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
@@ -115,7 +116,7 @@
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6 emphasize_text">執行策略：</div>
+                                    <div class="text_item_title h6 emphasize_text">營運價值：</div>
                                     <ul class="text_item_list" style="list-style:decimal">
                                         <li><span class="emphasize_text">透過員工福利機制</span>(品牌商品、娛樂活動、團購...等)，使集團能更融於員工生活增加認同感。</li>
                                         <li>藉由<span class="emphasize_text">APP為載體發送內部訊息</span>直接給予員工，取代總管理處→各公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化集團政策布達效率。</span></li>
