--- a/info_attribute_tell.html
+++ b/info_attribute_tell.html
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="pup_window_content_end_tip_container">
-                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">合作夥伴對於我的看法</span></span>
+                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">專案成員對於我的看法</span></span>
             </div>
         </div>
     </div>
