--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -86,7 +86,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">一、網站主要使用者類型</div>
-                    <div class="pup_normal_text">所謂「82法則」8成的收入來自2成的消費者，<br />所以2C的產品開發前，需要定義<span class="emphasize_text">誰是產品的主要收益來源</span>，<br />作為<span class="emphasize_text">「行銷推廣、招募受訪者、網站內容制定」</span>之依據。</div>
+                    <div class="pup_normal_text">所謂「82法則」8成的收入來自2成的消費者，<br />所以2C的產品開發前，需要定義誰會是<span class="emphasize_text">佔據8成產品收益來源的主力消費者</span>，<br />根據主力消費者的條件，作為產品開發<span class="emphasize_text">「如：行銷推廣、招募受訪者、網站內容制定...等」</span>之依據。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">展示部分條件為例(非實際詳細資訊)。</div>
                     <div class="pup_normal_text"></div>
                     <div class="pup_content_text">
@@ -101,14 +101,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗獲取，了解主力消費者大概會有哪些特性和條件，<br/>以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序。</div>
+                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br/>以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序。</div>
 
                 </div>
             </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">二、產品服務取向和使用者屬性</div>
-                    <div class="pup_normal_text">分析產品概念來推測，前來投保網站的使用者「個性、偏好」...等。</div>
+                    <div class="pup_normal_text">分析產品概念來推測，<span class="emphasize_text">前來投保網站的使用者會有「個性、偏好」</span>。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">投保網站以「保險」為主題進行分析。</div>
                     <div class="pup_content_pic_container" style="margin-top:20px;">
                         <div class="pup_content_pic_item">
@@ -127,7 +127,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">三、統整精煉產品面向</div>
-                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">以網站能對使用者產生共情效應為目的，<br/></span>明確產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定...等。</div>
+                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">以網站能對使用者產生共情效應為目的，<br/></span>作為產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定...等。</div>
                     <div class="pup_content_pic_container">
                         <div class="pup_content_pic_item">
                             <div class="pup_content_pic_item" style="text-align:left;">
