--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -103,7 +103,7 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、定義產品核心</div>
-                        <div class="pup_normal_text"><span class="emphasize_text">除了幫助使用者完成操作目標，更需定義完成操作後，產品能給營運方、使用者哪些價值，</span><br/>確保規劃內容符合開發成本。</div>
+                        <div class="pup_normal_text">除了幫助使用者完成操作目標，更需定義<span class="emphasize_text">產品使用後，能給營運方、使用者哪些價值，</span><br/>確保規劃內容符合開發成本。</div>
                         <div class="pup_normal_text">因此藉由訪談裕隆管理單位窗口，了解集團和員工之間的角色定位和需求，討論產品理念和營運價值。</div>
                         <div class="pup_content_text">
                             <div class="text_row">
