--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -167,8 +167,8 @@
                                                 <li><span class="emphasize_text">活動快訊：</span><br />
                                                     展示投資相關行銷活動，產生投資動機。
                                                 </li>
-                                                <li><span class="emphasize_text">股市標的、推薦基金、外幣漲幅排行：</span><br />
-                                                    以熱門投資標的、投資訴求、獲利導向，產生投資動機。
+                                                <li><span class="emphasize_text">股市標的、推薦基金、會員獲利排行：</span><br />
+                                                    以投資訴求、獲利導向、從眾效應，產生投資動機。
                                                 </li>
                                             </ul>
                                         </div>
