--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -101,14 +101,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br/>以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序。</div>
+                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br />以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序。</div>
+                    <div class="pup_normal_text_small" style="margin-top:10px;">如果沒有業務單位可以詢問，可以「田野調查網路社群，如：FB相關主題社團觀察他們的大頭像或熱門討論的內容(語氣個性、情緒)」，<br/>對於客群能有初步的輪廓，藉此再尋求同類型的親友作游擊訪談，初步確認主力客群條件。</div>
 
                 </div>
             </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">二、產品服務取向和使用者屬性</div>
-                    <div class="pup_normal_text">分析產品概念來推測，<span class="emphasize_text">前來投保網站的使用者會有「個性、偏好」</span>。</div>
+                    <div class="pup_normal_text">分析產品概念或競品網站(文案用詞、視覺元素)來推測，<span class="emphasize_text">前來投保網站的使用者會有「個性、偏好」</span>。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">投保網站以「保險」為主題進行分析。</div>
                     <div class="pup_content_pic_container" style="margin-top:20px;">
                         <div class="pup_content_pic_item">
@@ -127,7 +128,7 @@
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">三、統整精煉產品面向</div>
-                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">以網站能對使用者產生共情效應為目的，<br/></span>作為產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定...等。</div>
+                    <div class="pup_normal_text">統整服務取向、使用者屬性，<span class="emphasize_text">以網站能對使用者產生共情效應為目的，<br /></span>作為產品設計方向，如：網站視覺風格、文案用詞語氣、頁面主題制定...等。</div>
                     <div class="pup_content_pic_container">
                         <div class="pup_content_pic_item">
                             <div class="pup_content_pic_item" style="text-align:left;">
