--- a/uiux_index.html
+++ b/uiux_index.html
@@ -256,7 +256,7 @@
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice" style="display:none;">
-                    <div id="p3_menu"><a href="#p3">職能概貌</a></div>
+                    <div id="p3_menu"><a href="#p3">職能樣貌</a></div>
                     <div id="p4_menu"><a href="#p4">專長技能</a></div>
                     <div id="p5_menu"><a href="#p5">職涯與規劃</a></div>
                 </div>
@@ -269,7 +269,7 @@
                 <div class="page_list_item_page_choice">
                     <div id="p7_menu"><a href="#p7">永豐銀行&nbsp;網路投保網站</a></div>
                     <div id="p8_menu"><a href="#p8">元大期貨槓桿&nbsp;官方網站</a></div>
-                    <div id="p9_menu"><a href="#p9">裕隆集團&nbsp;員工資訊APP&amp;管理後台</a></div>
+                    <div id="p9_menu"><a href="#p9">裕隆集團&nbsp;員工APP&amp;2B管理後台</a></div>
                     <div id="p10_menu"><a href="#p10">金融服務商&nbsp;投資交易APP</a></div>
                     <div id="p11_menu"><a href="#p11">泰安產物&nbsp;產品行銷專案</a></div>
                 </div>
@@ -337,9 +337,12 @@
                         <div class="page_catalog_part_title h3">作者資料</div>
                         <ul class="page_catalog_part_list">
                             <li>
-                                <div class="list_page_name">職能概貌</div>
+                                <div class="list_page_name">職能樣貌</div>
                                 <div class="list_line"></div><a id="p3_list" href="#p3" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">3</a>
                             </li>
+                            <div class="list_note_container">
+                                <div class="list_note_tag">專案合作成員對我的看法</div>
+                            </div>
                             <li>
                                 <div class="list_page_name">專長技能</div>
                                 <div class="list_line"></div><a id="p4_list" href="#p4" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">4</a>
@@ -358,35 +361,35 @@
                                 <div class="list_line"></div><a id="p7_list" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">專案規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
+                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨槓桿&nbsp;官方網站</div>
                                 <div class="list_line"></div><a id="p8_list" href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">介面&amp;視覺設計</div>
+                                <div class="list_note_tag">官網介面&amp;視覺設計</div>
                             </div>
                             <li>
-                                <div class="list_page_name">裕隆集團&nbsp;<br>員工資訊APP&amp;管理後台</div>
+                                <div class="list_page_name">裕隆集團&nbsp;<br>員工APP&amp;2B管理後台</div>
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">專案規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
+                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
                                 <div class="list_line"></div><a id="p10_list" href="#p10" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">10</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品提案&nbsp;→&nbsp;介面&amp;視覺設計</div>
+                                <div class="list_note_tag">產品提案思維&nbsp;→&nbsp;介面&amp;視覺設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">泰安產物&nbsp;活動網頁</div>
                                 <div class="list_line"></div><a id="p11_list" href="#p11" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">11</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">視覺設計&nbsp;→&nbsp;原型製作</div>
+                                <div class="list_note_tag">行銷視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                         </ul>
                     </div>
@@ -443,7 +446,7 @@
                     </div>
                     <div class="page_subtitle_container h3 set_middle" style="margin-top:25px;">
                         <div>
-                            職能概貌
+                            職能樣貌
                         </div>
                         <div>
                             <picture>
@@ -486,7 +489,7 @@
             </div>
             <div class="page_content_container">
                 <div id="p3_title" class="page_content_title">
-                    <div class="page_content_title_name page_content_title_name_4word">職能概貌</div>
+                    <div class="page_content_title_name page_content_title_name_4word">職能樣貌</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1000,7 +1003,6 @@
                                 進行需求訪談並定義產品面向，規劃資訊架構、頁面布局、功能機制並繪製線框稿Wireframe，協助完成PRD文件使網站開發有所依據。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_0.html">UX分析</a></span>
                             </div>
                             <div style="margin-top:10px;">
@@ -1032,6 +1034,7 @@
 
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                    <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">介面設計亮點</a></span>
                                 </div>
                             </div>
@@ -1137,7 +1140,6 @@
                                 我方公司與<span class="font_bold">兩家上市企業的設計部門競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
                                 <span><a href="yuanta_works_1.html">介面風格(一)</a></span>
                             </div>
@@ -1159,6 +1161,7 @@
                                 專案以視覺風格(一)得標，進一步討論需求後，完成元大「期貨槓桿交易商」官網介面設計稿。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
                                 <span><a href="yuanta_works_3.html">介面設計稿</a></span>
                             </div>
@@ -1194,14 +1197,14 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">裕隆&nbsp;員工資訊APP和管理後台</div>
+                    <div class="page_content_title_name">裕隆&nbsp;員工APP和2B管理後台</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
                 <div class="work_appinfo_container">
                     <div class="work_appinfo_img_container">
                         <picture>
-                            <img src="images/project_img_3.png" class="work_appinfo_img" alt="裕隆員工資訊APP登入頁示意圖1">
+                            <img src="images/project_img_3.png" class="work_appinfo_img" alt="裕隆員工APP登入頁示意圖1">
                         </picture>
                     </div>
                     <div id="p9_title" class="work_appinfo_describe">
@@ -1239,7 +1242,6 @@
                                             進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                             <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
                                         </div>
                                         <div style="margin-top:10px;">
@@ -1257,15 +1259,18 @@
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a href="yulon_works_3.html">APP介面設計稿</a></span>
+                                            <span><a href="yulon_works_3.html">APP設計稿</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
-                                            <span><a href="yulon_works_4.html">後台介面設計稿</a></span>
+                                            <span><a href="yulon_works_4.html">2B後台設計稿</a></span>
                                         </div>
-                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a href="yulon_works_5.html">設計亮點</a></span>
+                                        <div style="margin-top:10px;">
+                                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                                <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
+                                                <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                                <span><a href="yulon_works_5.html">產品設計亮點</a></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -1281,7 +1286,6 @@
                                     進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
                                 </div>
                                 <div style="margin-top:10px;">
@@ -1299,15 +1303,18 @@
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="yulon_works_3.html">APP介面設計稿</a></span>
+                                    <span><a href="yulon_works_3.html">APP設計稿</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="yulon_works_4.html">後台介面設計稿</a></span>
+                                    <span><a href="yulon_works_4.html">2B後台設計稿</a></span>
                                 </div>
-                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="yulon_works_5.html">設計亮點</a></span>
+                                <div style="margin-top:10px;">
+                                    <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                        <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
+                                        <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                        <span><a href="yulon_works_5.html">產品設計亮點</a></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1391,6 +1398,9 @@
                                             <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                             <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="gapp_works_1.html">提案內容</a></span>
                                         </div>
+                                        <div class="work_info_note">
+                                            <div style="font-size:16px;color:#232323;"><span>*</span>以加速使用者旅程，提高營利循環效率作為產品規劃方向。</div>
+                                        </div>
                                     </div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
@@ -1425,6 +1435,9 @@
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
                                     <span><a href="gapp_works_1.html">提案內容</a></span>
+                                </div>
+                                <div class="work_info_note">
+                                    <div style="font-size:16px;color:#232323;"><span>*</span>以加速使用者旅程，提高營利循環效率作為產品規劃方向。</div>
                                 </div>
                             </div>
                             <div class="work_info_subpart">
@@ -1504,7 +1517,6 @@
                                 依行銷人員提供的<a href="taian_info.html" class="pup_info_link">示意資料</a>，討論確認後，產出介面設計稿。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
                                 <span><a href="taian_works.html">介面設計稿</a></span>
                             </div>
@@ -1517,6 +1529,7 @@
                                 確認介面設計稿後，進行前端切版製作初步原型。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="website/travel_activity/page.html" target="_blank" id="taian_prototype_html">實行性原型(前端切版)</a></span>
                             </div>
                         </div>
@@ -1664,7 +1677,6 @@
                             </ul>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_1.html">實作內容</a></span>
                                 </div>
                             </div>
@@ -1733,6 +1745,7 @@
                             </div>
                             <div class="pup_link_area" style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                    <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="oloo_works_4.html">專案個人亮點</a></span>
                                 </div>
                             </div>
@@ -1836,7 +1849,7 @@
                         <div class="work_info_text font_bold" style="margin-top:10px;">與兩家上市企業設計部門競爭標案，提案介面設計稿勝出得標。</div>
                     </div>
                     <div class="work_info_part">
-                        <div class="work_info_title h3 font_bold">裕隆集團&nbsp;員工資訊APP&amp;管理後台</div>
+                        <div class="work_info_title h3 font_bold">裕隆集團&nbsp;員工APP&amp;2B管理後台</div>
                         <div class="work_info_text">
                             <ul>
                                 <li>緊密訪談客戶相關單位，作為產品規劃基礎。</li>
