--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -88,6 +88,7 @@
         </div>
         <div class="pup_window_tab_content_container">
             <div id="gapp_tab_1" class="pup_window_tab_content">
+                
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:0px;">
                     <div class="pup_content">
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
@@ -159,13 +160,13 @@
                                         <div class="pup_normal_text">
                                             <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
                                                 <li><span class="emphasize_text">資產概要：</span><br />
-                                                    投資績效的重點資訊，增加決策效率。
+                                                    投資績效的重點資訊，引導使用者思考投資決策。
                                                 </li>
                                                 <li><span class="emphasize_text">快捷功能：</span><br />
                                                     以投資常用功能設於首頁，減少操作的時間，強化使用體驗。<br /><span class="pup_normal_text_small">*可個人化設置</span>
                                                 </li>
                                                 <li><span class="emphasize_text">活動快訊：</span><br />
-                                                    展示投資相關行銷活動，產生投資動機。
+                                                    展示投資相關行銷活動，引導投資行動。
                                                 </li>
                                                 <li><span class="emphasize_text">股市標的、推薦基金、會員獲利排行：</span><br />
                                                     以投資訴求、獲利導向、從眾效應，產生投資動機。
@@ -332,6 +333,7 @@
                         </script>
                     </div>
                 </div>
+                
             </div>
             <div id="gapp_tab_2" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
