--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1432,7 +1432,6 @@
                                     參照品牌網站內容，發想APP產品核心概念、制定頁面架構內容、分析視覺形象，與客戶凝聚出設計共識和執行方向。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
                                     <span><a href="gapp_works_1.html">提案內容</a></span>
                                 </div>
@@ -1451,9 +1450,12 @@
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
                                     <span><a href="gapp_works_2.html">介面設計稿</a></span>
                                 </div>
-                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="gapp_works_3.html">設計亮點</a></span>
+                                <div style="margin-top:10px;">
+                                    <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                        <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
+                                        <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                        <span><a href="gapp_works_3.html">產品設計亮點</a></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
