--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -92,7 +92,7 @@
             <div id="yulon_tab_9" class="pup_window_tab_content">
                 <div class="pup_window_content_part" style="padding-left:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 一、根據操作情境，設計使用功能</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 一、根據後台操作情境，設計使用功能</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text font_bold">1.頻率高、即時性高的操作</span></div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="pup_window_content_part" style="padding-left:0px;margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、針對使用需求，設計功能機制</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、針對前台使用需求，設計功能機制</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;"><span>針對福利項目，有彈性設置申請表單。</span></div>
