--- a/uiux_index.html
+++ b/uiux_index.html
@@ -361,21 +361,21 @@
                                 <div class="list_line"></div><a id="p7_list" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
+                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨槓桿&nbsp;官方網站</div>
                                 <div class="list_line"></div><a id="p8_list" href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">官網介面&amp;視覺設計</div>
+                                <div class="list_note_tag">官網介面&amp;介面&amp;視覺設計</div>
                             </div>
                             <li>
                                 <div class="list_page_name">裕隆集團&nbsp;<br>員工APP&amp;2B管理後台</div>
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;視覺設計&nbsp;→&nbsp;原型製作</div>
+                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
