--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="pup_window_content_part">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">一、資料分析，提出產品規劃觀點</div>
+                                <div class="part_title h5 font_bold emphasize_text">一、使用者投資流程分析，提出產品規劃觀點</div>
                                 <div class="text_item" style="margin-top:10px;">
                                     <div class="text_item_title h6">分析方向</div>
                                     <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin-top:5px;">
