--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1837,7 +1837,7 @@
                                 <li>彙整易用性測試報告，並提供行動建議。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">從產品規劃到交付設計原型，具有深度的專案執行力。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">從產品需求規劃到交付產品前端原型，具有深度的專案執行力。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">元大期貨槓桿&nbsp;官方網站</div>
@@ -1848,7 +1848,7 @@
                                 <li>掌握版型和風格，交付介面設計稿。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">與兩家上市企業設計部門競爭標案，提案介面設計稿勝出得標。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">與兩家上市企業設計部門競爭標案，介面和視覺提案勝出得標。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">裕隆集團&nbsp;員工APP&amp;2B管理後台</div>
@@ -1863,7 +1863,7 @@
                                 <li>貼合產品開發，提供介面樣式庫文件。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">定義2C2B產品核心，規劃內容切合業務需求，並完成交付介面設計稿。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">定義2C2B產品核心，規劃內容切合業務需求，完成介面視覺原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">金融服務商&nbsp;投資交易APP</div>
@@ -1877,7 +1877,7 @@
                                 <li>運用UX原則，進行介面設計。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">邏輯分析使用者需求和產品營運要素，制定執行內容並交付介面設計稿。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">分析使用者旅程、屬性，以提升產品營利為規劃內容，完成介面視覺原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">泰安產物&nbsp;活動網頁</div>
@@ -1889,7 +1889,7 @@
                                 <li>依介面設計稿執行前端RWD切版。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">根據行銷人員規劃內容，完成符合形象概念之介面設計稿並交付設計原型。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">根據行銷人員規劃內容，完成符合形象概念之網頁前端原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">oloo共享交通&nbsp;UXR市場研究</div>
@@ -1902,7 +1902,7 @@
                                 <li>了解「發表用簡報」架構要素，以圖文鋪陳故事性，呈現簡明易懂且具吸引力之內容。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">完整且深度之UXR研究案實作，並邏輯論述具商業價值之研究洞見。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">完整且深度之UXR研究案實作，論述商業價值之研究洞見並獲得業主肯定。</div>
                     </div>
                 </div>
 
