--- a/uiux_index.html
+++ b/uiux_index.html
@@ -782,7 +782,7 @@
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
                             <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.03</span><br />網頁設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">網站製作公司任職</span>，負責網站視覺設計，接續前端切版和維運更新。
+                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和html.css無障礙前端切版。
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_right set_middle">
                                 <div>
@@ -1035,7 +1035,7 @@
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">介面設計亮點</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">產品設計亮點</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1877,7 +1877,7 @@
                                 <li>運用UX原則，進行介面設計。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">分析使用者旅程、屬性，以提升產品營利為規劃內容，完成介面視覺原型。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">分析使用者旅程，以提升產品營利為規劃內容，完成介面視覺原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">泰安產物&nbsp;活動網頁</div>
