--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1134,7 +1134,7 @@
                         <div id="p8-2_title" class="work_info_title h3 font_bold">個人負責工作</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面提案
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>視覺提案
                             </div>
                             <div class="work_info_subtext">
                                 我方公司與<span class="font_bold">兩家上市企業的設計部門競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
