--- a/uiux_index.html
+++ b/uiux_index.html
@@ -361,7 +361,7 @@
                                 <div class="list_line"></div><a id="p7_list" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品需求規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;前端原型製作</div>
+                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;前端原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨槓桿&nbsp;官方網站</div>
@@ -375,7 +375,7 @@
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品需求規劃&nbsp;→&nbsp;介面視覺原型</div>
+                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;介面視覺原型</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
