--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br />以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序。</div>
+                    <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br />以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序，由廣入深以漏斗的方式篩選出主力客群，並從中分析使用者屬性。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">如果沒有業務單位可以詢問，可以「田野調查網路社群，如：FB相關主題社團觀察他們的大頭像或熱門討論的內容(語氣個性、情緒)」，<br/>對於客群能有初步的輪廓，藉此再尋求相關領域的專家進行深度的訪談，初步推估主力客群條件。</div>
 
                 </div>
