--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1246,7 +1246,8 @@
                                         </div>
                                         <div style="margin-top:10px;">
                                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">線框稿</a></span>
+                                                <div class="pup_link_container_tip" style="width:110px;right:-115px;">功能機制說明</div>
+                                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">前、後台線框稿</a></span>
                                             </div>
                                         </div>
                                     </div>
@@ -1290,7 +1291,8 @@
                                 </div>
                                 <div style="margin-top:10px;">
                                     <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                        <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">線框稿</a></span>
+                                        <div class="pup_link_container_tip" style="width:110px;right:-115px;">功能機制說明</div>
+                                        <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">前、後台線框稿</a></span>
                                     </div>
                                 </div>
                             </div>
