--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1260,7 +1260,7 @@
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a href="yulon_works_3.html">APP設計稿</a></span>
+                                            <span><a href="yulon_works_3.html">前台APP設計稿</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
@@ -1305,7 +1305,7 @@
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="yulon_works_3.html">APP設計稿</a></span>
+                                    <span><a href="yulon_works_3.html">前台APP設計稿</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
