--- a/uiux_index.html
+++ b/uiux_index.html
@@ -754,8 +754,8 @@
 
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_small_item">
-                            <div class="progress_item_time font_bold"><span>2013.05&nbsp;-&nbsp;2014.05</span><br />平面設計</div>
-                            <div class="progress_item_content"><span class="font_bold">多媒體、行銷公司任職</span>，製作網路行銷的活動網頁、廣告Banner。</div>
+                            <div class="progress_item_time font_bold"><span>2013.05&nbsp;-&nbsp;2014.05</span><br />視覺設計專員</div>
+                            <div class="progress_item_content"><span class="font_bold">多媒體、行銷公司任職(客戶有易遊網、長榮航空)</span>，提供公司與合作廠商所需求視覺設計成品，如：行銷活動網頁、EDM、網站廣告banner、DM。</div>
                             <div class="progress_item_spot progress_small_item_spot spot_left set_middle">
                                 <div>
                                     <img src="images/small_item_spot_icon.png" alt="紙飛機圖案">
@@ -780,9 +780,9 @@
                             <div class="left_line_large"></div>
                         </div>
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
-                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.03</span><br />網頁設計</div>
+                            <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網站設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和html.css無障礙前端切版。
+                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和HTML、CSS無障礙前端切版。
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_right set_middle">
                                 <div>
@@ -802,9 +802,9 @@
 
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_medium_item progress_medium_item_left_padding">
-                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.02</span><br />產品設計</div>
+                            <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />產品設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">教育類科技公司任職</span>，負責將國、高中紙本教材轉為數位產品。
+                                <span class="font_bold">教育類科技公司任職</span>，網站產品和管理後台使用發想和製作、網站介面設計與HTML、SCSS前端切版建置使用Jquery做介面互動視覺效果、APP產品維運更版。
                             </div>
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
@@ -838,7 +838,7 @@
                         <div class="progress_item progress_large_item progress_large_item_right_padding">
                             <div class="progress_item_time font_bold"><span>2021.03&nbsp;-&nbsp;2024.05</span><br />UI.UX設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">系統開發商任職</span>，專案客戶皆為集團級企業，規劃數位產品，製作介面、視覺設計和前端切版。
+                                <span class="font_bold">系統開發商(金融、保險)任職</span>，專案客戶皆為集團級企業，各類2C網站、APP產品、2B後台系統的功能流程規劃和介面設計；網站HTML、SCSS撰寫切版建置，並使用Jquery做介面互動視覺效果。
                             </div>
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
@@ -1962,7 +1962,7 @@
                                             <li>電子信箱：a52363037@yahoo.com.tw</li>
                                             <li>
                                                 <span class="font_bold">
-                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1mBmh85ApHjsAKL5XQD5whgxv8t9DSpuX/view?usp=drive_link" target="_blank" id="resume_p1">第一頁.pdf</a>、<a href="https://drive.google.com/file/d/1WzahVK-7dV0CJuf2-0vWSEvrKyeLYmrj/view?usp=drive_link" target="_blank" id="resume_p2">第二頁.pdf</a>
+                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1kV6_VRUVGPZ3nvy-fClVp0g3pcR-7rxv/view?usp=drive_link" target="_blank" id="resume_p1">查看、下載簡歷.pdf</a>
                                                 </span>
                                             </li>
                                         </ul>
