--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1211,7 +1211,7 @@
                         <div class="work_info_part display_none_1200_2 display_block_960_2">
                             <div class="work_info_title h3 font_bold">專案介紹</div>
                             <div class="work_info_text">
-                                將員工福利項目、內部營運訊息、集團職缺整合至APP，並提供後台給予維運單位進行管理；<br />藉由員工資訊APP，幫助集團與員工能更加貼近、相互契合，成為集團營運的一股助力。
+                                將員工福利項目、內部營運訊息、集團職缺整合至APP，並提供2B管理後台給予維運單位進行管理；<br />藉由員工資訊APP，幫助集團與員工能更加貼近、相互契合，成為集團營運的一股助力。
                             </div>
                             <div class="work_appinfo_img_container_960 appear-animation" data-appear-animation="fadeInUp">
                                 <picture>
@@ -1229,7 +1229,7 @@
                                 <div class="work_info_part">
                                     <div class="work_info_title h3 font_bold">專案介紹</div>
                                     <div class="work_info_text">
-                                        將員工福利項目、內部營運訊息、集團職缺整合至APP，並提供後台給予維運單位進行管理；<br />藉由員工資訊APP，幫助集團與員工能更加貼近、相互契合，成為集團營運的一股助力。
+                                        將員工福利項目、內部營運訊息、集團職缺整合至APP，並提供2B管理後台給予維運單位進行管理；<br />藉由員工資訊APP，幫助集團與員工能更加貼近、相互契合，成為集團營運的一股助力。
                                     </div>
                                 </div>
                                 <div class="work_info_part" style="margin-bottom:0px;">
@@ -1239,7 +1239,7 @@
                                             <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃APP&amp;管理後台
                                         </div>
                                         <div class="work_info_subtext">
-                                            進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
+                                            進行需求訪談，依記錄規劃APP&amp;2B管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
@@ -1247,7 +1247,7 @@
                                         <div style="margin-top:10px;">
                                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                                 <div class="pup_link_container_tip" style="width:110px;right:-115px;">功能機制說明</div>
-                                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">前、後台線框稿</a></span>
+                                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">前台、2B後台-線框稿</a></span>
                                             </div>
                                         </div>
                                     </div>
@@ -1284,7 +1284,7 @@
                                     <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>內容規劃
                                 </div>
                                 <div class="work_info_subtext">
-                                    進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
+                                    進行需求訪談，依記錄規劃APP&amp;2B管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
@@ -1292,7 +1292,7 @@
                                 <div style="margin-top:10px;">
                                     <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                         <div class="pup_link_container_tip" style="width:110px;right:-115px;">功能機制說明</div>
-                                        <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">前、後台線框稿</a></span>
+                                        <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">前台、2B後台-線框稿</a></span>
                                     </div>
                                 </div>
                             </div>
@@ -1301,7 +1301,7 @@
                                     <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面設計稿<span>Mockups</span>
                                 </div>
                                 <div class="work_info_subtext">
-                                    線框稿Wireframe定案後，與需求方討論風格、配色、介面布局...等規劃，並產出APP&amp;管理後台介面設計稿給予確認。
+                                    線框稿Wireframe定案後，與需求方討論風格、配色、介面布局...等規劃，並產出APP&amp;2B管理後台介面設計稿給予確認。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
