--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
                             <div class="pup_normal_text font_bold" style="margin-bottom:5px;">1.登入頁</div>
-                            <div class="pup_normal_text_small">若依客戶網站的登入介面</div>
+                            <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">若依客戶網站的登入介面</div>
                             <picture>
                                 <img src="images/gapp_pic_7-1.png" style="max-width:100%">
                             </picture>
@@ -180,7 +180,7 @@
                             讓使用者需專注閱讀，難以輕鬆直覺的選擇操作。
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
-                            <div class="pup_normal_text_small">我的設計：</div>
+                            <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">我的設計：</div>
                             <picture>
                                 <img src="images/gapp_pic_6-1.png" style="max-width:100%">
                             </picture>
@@ -208,7 +208,7 @@
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
                             <div class="pup_normal_text font_bold" style="margin-bottom:5px;">2.登入身分頁</div>
-                            <div class="pup_normal_text_small">若依客戶網站的介面設計</div>
+                            <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">若依客戶網站的介面設計</div>
                             <picture>
                                 <img src="images/gapp_pic_7-3.png" style="max-width:100%">
                             </picture>
@@ -220,7 +220,7 @@
                             「選擇登入」「移除身分」是獨立的操作目標，若同時顯示易造成混淆，<br />如：客戶網站版本，右箭頭是「選擇登入」或「前往移除」？
                         </div>
                         <div class="pup_content_pic" style="margin-top:20px;">
-                            <div class="pup_normal_text_small">我的設計</div>
+                            <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">我的設計</div>
                             <picture>
                                 <img src="images/gapp_pic_6-5.png" style="max-width:100%">
                             </picture>
