--- a/uiux_index.html
+++ b/uiux_index.html
@@ -746,7 +746,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">職涯與規劃</div>
+                    <div id="p5_title" class="page_content_title_name">職涯與規劃</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -811,6 +811,11 @@
                                     <li style="margin-bottom:3px;">設計影音解答題本的活動網站，以考前猜題吸引學生註冊，除註冊資料外，並以GA、GTM收集數據；業務經理反饋對產品銷售有很大幫助。</li>
                                     <li>設計人資單位、家教部管理後台，皆有正面評價。</li>
                                 </ul>
+                                <a href="study_1.html">
+                                    <div class="info_skill_item_check font_bold appear-animation ps_works_btn fadeInUp appear-animation-visible" style="text-align:left;margin-top:10px;position:relative;top:0px;left:0px;">
+                                        產品發想思維-案例展示
+                                    </div>
+                                </a>
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_left set_middle">
                                 <div>
